# Repohackaton

./: .env.example  CLOUDFLARE_OPENAI_ENDPOINT.md  DIAGRAMA_FLUJO.md  IMPLEMENTACION.md  QUICKSTART.md  README.md  RESUMEN.md  VERIFICACION.md  agent-general.md  autopoiesis_para_sistemas_de_agentes_de_ia_documento_de_contexto_para_llm (2).md  event_logging_example.py  guia_para_llm_usar_lang_chain_como_contexto_del_sistema.md  guia_para_llm_usar_lang_graph_como_contexto_del_sistema.md  main.py  permissions_usage.py  pruebas.ipynb  pyproject.toml  requirement.txt  test_cloudflare_connection.py  test_file.txt
examples/: basic_usage.py  cloudflare_usage.py  permissions_usage.py
src/: __init__.py  agent.py  agent_repository.py  autopoietic_orchestrator.py  commands.py  config.py  event.py  event_manager.py  execution_nodes.py  meta_agent_router.py  orchestrator_state.py  query_llm.py  registro_de_eventos.py
src/permissions/: __init__.py  permissions_manager.py
